--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -21,9 +21,10 @@ jobs:
         username: ${{ secrets.DOCKER_HUB_USERNAME }}
         password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
-    - name: Build and push Docker image
+        - name: Build and push Docker image
       uses: docker/build-push-action@v2
       with:
-        context: .
+        context: snek
         push: true
-        tags: Ind3/snek:latest
+        tags: ind3/snek:latest
+        file: snek/Dockerfile
