--- a/snek/Dockerfile
+++ b/snek/Dockerfile
@@ -1,5 +1,5 @@
 # Use an official lightweight C runtime as a parent image
-FROM debian:stretch-slim
+FROM gcc:latest
 
 # Set the working directory in the container to /app
 WORKDIR /app
@@ -7,16 +7,8 @@ WORKDIR /app
 # Copy the current directory contents into the container at /app
 COPY . /app
 
-# Install any needed packages specified in requirements.txt
-RUN apt-get update && \
-    apt-get install -y gcc && \
-    rm -rf /var/lib/apt/lists/*
-
 # Make port 80 available to the world outside this container
-EXPOSE 80
+EXPOSE 49777
 
 # Compile the C program
-RUN gcc -o snek snek.c
-
-# Run snek when the container launches
-CMD ["./snek"]
+RUN gcc -o snek.out snek.c
